--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.30.6
 jinja2==3.1.4
 aiofiles==24.1.0
-
+python-jose[cryptography]==3.3.0
 sqlalchemy==2.0.34
 pydantic==2.8.2
 pydantic-settings==2.4.0
