--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ sqlalchemy==2.0.34
 pydantic==2.8.2
 pydantic-settings==2.4.0
 python-multipart==0.0.9
-
+httpx==0.27.2
+requests==2.32.3
 aiosqlite==0.20.0
-
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
